creates register page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,9 @@
         "title": "Login",
         "show-password": "Show password",
         "hide-password": "Hide password"
+    },
+
+    "register-page": {
+        "button": "Register"
     }
 }
