adds go back button on register page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,7 @@
     },
 
     "register-page": {
-        "button": "Register"
+        "button": "Register",
+        "go-to-login": "Already have an account? Login"
     }
 }
